@@ -25,6 +25,7 @@ Version 0.3p
  - The perks aren't fully implemented yet.
  - Once unlocked, you can meet the new strains in the regular rabbit encounter.
  - Brute win scene added, written by QB/LD.
+ - Brainy loss scene added, written by QB/LD.
 
 --------------------------------------------
              PREVIOUS VERSIONS
